# Meus-projetos-em-python

./: README.md  aprendendo a debugar.py
Blibliotecas/: numpy.ipynb
Blibliotecas/numpy/: numpy.ipynb
Blibliotecas/pandas/: pandas.ipynb
IA/projeto-ml/: IA_Regressão_Linear.html  IA_Regressão_Linear.ipynb  app.py  pyproject.toml
automacao/: position.py  pyautogui.ipynb  zerarSeguidores.py
lista 1 ONIA/: Age in Days.py  Bhaskara's Formula.py  Camisetas.py  DDD.py  Huaauhahhuahau.py  Multiples of 13.py  Saldo do Vovô.py  area of a circle.py  simple sum.py
meu-primeiro-projeto/: app.py  base_de_dados.csv  sistema.py
