[tool.poetry]
name = "projeto-ml"
version = "0.1.0"
description = ""
authors = ["João Henrique da silva <7joaohenrique5557@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
scikit-learn = "^1.8.0"
streamlit = "^1.52.2"
matplotlib = "^3.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
